Banner Overflow fixed

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   background-color: #f4f4f4;
   color: #555;
@@ -56,7 +59,7 @@ body {
   clear: both;
 }
 
-.container-sponcers{
+.container-sponcers {
   border-top: 1px solid black;
   display: flex;
   justify-content: center;
@@ -64,12 +67,12 @@ body {
   padding-bottom: 50px;
 }
 
-.row{
+.row {
   width: 100%;
   max-width: 900px;
 }
 
-.title-sponcers{
+.title-sponcers {
   color: #a7323f;
   text-transform: uppercase;
   width: 100%;
@@ -78,13 +81,13 @@ body {
   text-align: center;
 }
 
-.box-sponcer{
+.box-sponcer {
   width: 15%;
   height: 100px;
   margin: 5px;
-}  
+}
 
-.box-wrapper{
+.box-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -130,15 +133,23 @@ body {
   font-size: 18px;
 }
 
-#showcase {
-  height: 450px;
-  width: auto;
-  margin-top: 8px;
-  position: relative;
+.size-showcase {
   background-image: url(../PNG/Banner\ Oficial/Banner-Oficial.jpeg);
-  background-repeat: no-repeat;
   background-position: center center;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: 475px;
+}
+
+#showcase {
+  width: 100%;
+  max-height: 475px;
+  margin-top: 8px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 #main {
